# sfml-sample

./: CMakeLists.txt
src/: main.cpp
src/common/: time-updatable.h  updatable.h
src/entities/: player.cpp  player.h
src/utility/: time.cpp  time.h
